<resources>
    <string name="app_name">Smart Money</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign out</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_to_sign_up">Don\'t have an account yet?</string>
    <string name="hint_to_sign_in">Already have an account?</string>
    <string name="remember_me">Remember me</string>

    <string name="manager_title">Manage your transaction with</string>
    <string name="settings_title">Edit your profile with,</string>
    <string name="stats_title">Plan your budget with</string>

    <string name="transaction_manager">Transaction Manager</string>
    <string name="statistic">Statistic</string>
    <string name="settings">Settings</string>

    <string name="hey_there">Hey there,</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="create_an_account">Let\'s Create an Account</string>
    <string name="error_title">Oops! Something goes wrong</string>

    <string name="history">History</string>
    <string name="manager">Manager</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="submit">Submit</string>

    <string name="app_description">Your personal transaction helper</string>
    <string name="total">Total</string>
    <string name="new_transaction">New</string>

    <string name="email">Email</string>
    <string name="hello">Hello</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_your_password">Confirm your password</string>

    <string name="googleAds">ca-app-pub-1443703282173110/9392812353</string>
    <string name="try_again">Try again</string>
    <string name="limit_description">Set maximum amount of money you are ready to spend</string>
    <string name="limit">Limit</string>
    <string name="overachieve_hint">You\'ve overachieved your plan!</string>
    <string name="forget_password">Forget password?</string>
</resources>