<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="50dp"
    tools:context=".ui.manager.ManagerFragment">

    <com.example.smartmoney.common.CustomHeader
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:headerTitle="@string/manager_title"
        app:headerPageName="@string/manager"/>

    <LinearLayout
        android:id="@+id/btnLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/newTransactionBtn"
            style="@style/halfScreenBtn"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:text="@string/new_transaction" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submitBtn"
            style="@style/halfScreenBtn"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/submit" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_manager_wrapper"
        android:overScrollMode="never"
        android:padding="10dp"
        android:scrollbarThumbVertical="@color/white"
        app:layout_constraintBottom_toTopOf="@id/btnLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/amountWrapper"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_corners_white"
                android:hint="@string/amount"
                android:paddingBottom="4dp"
                android:textColorHint="@color/dark_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionWrapper"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/bg_corners_white"
                android:hint="@string/description"
                android:paddingBottom="4dp"
                android:textColorHint="@color/dark_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="text"
                    android:maxLength="35"
                    android:maxLines="1"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/bg_switcher"
                android:orientation="horizontal"
                android:padding="1dp"
                android:weightSum="2">

                <RadioButton
                    android:id="@+id/income"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:background="@drawable/bg_switcher_selector_first"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:tag="Income"
                    android:text="@string/income"
                    android:textColor="@color/bg_switcher_text" />

                <RadioButton
                    android:id="@+id/expense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_switcher_selector_second"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:tag="Expense"
                    android:text="@string/expense"
                    android:textColor="@color/bg_switcher_text" />
            </RadioGroup>

            <DatePicker
                android:id="@+id/calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/bg_corners_white"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:dateTextAppearance="@style/CalenderViewDateCustomText"
                android:theme="@style/CalenderViewCustom"
                android:weekDayTextAppearance="@style/CalenderViewWeekCustomText" />

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>