<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_header_bg"
    tools:context=".ui.stats.StatsFragment">

    <com.example.smartmoney.common.CustomHeader
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:headerPageName="@string/statistic"
        app:headerTitle="@string/stats_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/overachieveHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:visibility="gone"
        android:text="@string/overachieve_hint"
        android:textColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/chartWrapper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/chartWrapper"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:paddingStart="26dp"
        android:paddingEnd="26dp"
        app:layout_constraintTop_toTopOf="@+id/guideline25">

        <com.example.smartmoney.common.CustomProgressChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:weightSum="2"
        app:layout_constraintTop_toTopOf="@+id/guideline43">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="26dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/limit_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/limitWrapper"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/limit"
                android:textColorHint="@color/dark_gray"
                app:layout_constraintTop_toTopOf="@+id/guideline20">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/limitInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_corners"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/limitPercentOfTotal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="@font/poppins"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="100% of total" />
        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.43" />
</androidx.constraintlayout.widget.ConstraintLayout>